[workspace]
resolver = "2"

members = [
  "build",
  "cargo",
  "macros",
  "ethers",
  "api",
  "exports",
  "utils",
  "rusnap",
]

[workspace.package]
repository = "https://github.com/tiannian/rusnap"
readme = "README.md"
license = "MIT"
authors = ["tiannian <dtiannian@gmail.com>"]

[workspace.dependencies]
rusnap-utils = { version = "0.1", path = "utils" }
rusnap-macros = { version = "0.1", path = "macros" }

async-trait = "0.1.73"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
log = "0.4.20"

wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.6.0"
js-sys = "0.3.64"

const-hex = { version = "1.9.1", features = ["hex"] }
