[workspace]
resolver = "2"

members = [
  "rusnap-build",
  "cargo-rusnap",
  "rusnap-macros",
  "rusnap-ethers",
  "rusnap-api",
  "rusnap-exports",
  "rusnap-utils",
  "rusnap",
]

[workspace.package]
repository = "https://github.com/tiannian/rusnap"
readme = "README.md"
license = "MIT"
authors = ["tiannian <dtiannian@gmail.com>"]

[workspace.dependencies]
rusnap-api = { version = "0.1", path = "rusnap-api" }
rusnap-build = { version = "0.1", path = "rusnap-build" }
rusnap-ethers = { version = "0.1", path = "rusnap-ethers" }
rusnap-exports = { version = "0.1", path = "rusnap-exports" }
rusnap-utils = { version = "0.1", path = "rusnap-utils" }
rusnap-macros = { version = "0.1", path = "rusnap-macros" }

async-trait = "0.1.73"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
log = "0.4.20"

wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.6.0"
js-sys = "0.3.64"

const-hex = { version = "1.9.1", features = ["hex"] }
