[package]
name = "cargo-rusnap"
version = "0.1.1"
edition = "2021"
description = "Cargo tool for RuSnap"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cargo_metadata = "0.18.0"
clap = { version = "4.4.5", features = ["derive"] }
env_logger = "0.10.0"
log.workspace = true
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
toml_edit = "0.20.2"
warp = "0.3.6"
wasm-pack = "0.12.1"
