[package]
name = "rusnap-macros"
version = "0.1.0"
edition = "2021"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
