[package]
name = "rusnap-macros"
version = "0.1.1"
edition = "2021"
description = "Macros for RuSnap"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
