[package]
name = "rusnap-ethers"
version = "0.1.4"
edition = "2021"
description = "Ethers compact layer for RuSnap"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
js-sys.workspace = true
log.workspace = true
rusnap-utils.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

ethers-providers = { version = "2.0.10", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
