[package]
name = "rusnap-exports"
version = "0.1.0"
edition = "2021"
description = "RuSnap exports api to Metamask Snap"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusnap-macros.workspace = true
rusnap-utils.workspace = true

js-sys.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
const-hex.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
