[package]
name = "rusnap-utils"
version = "0.1.0"
edition = "2021"
description = "Utils for RuSnap"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-hex.workspace = true
serde.workspace = true
js-sys.workspace = true

[dev-dependencies]
base64 = "0.21.4"
digest = "0.10.7"
serde_json = "1.0.107"
sha2 = "0.10.8"
