[package]
name = "rusnap"
version = "0.1.6"
edition = "2021"
description = "Metamask Snap in Rust"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusnap-api.workspace = true
rusnap-build.workspace = true
rusnap-ethers.workspace = true
rusnap-exports.workspace = true
rusnap-utils.workspace = true
rusnap-macros.workspace = true

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
async-trait.workspace = true
