[package]
name = "rusnap-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
primitive-types = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
thiserror = "1.0.49"
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
