[package]
name = "rusnap"
version = "0.1.1"
edition = "2021"
description = "Library for RuSnap"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusnap-macros.workspace = true

async-trait = "0.1.73"
js-sys = "0.3.64"
primitive-types = { version = "0.12.1", features = [
  "serde_no_std",
], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
thiserror = "1.0.49"
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
