[package]
name = "rusnap"
version = "0.1.3"
edition = "2021"
description = "Library for RuSnap"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusnap-macros.workspace = true

async-trait = "0.1.73"
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
thiserror = "1.0.49"
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
log = "0.4.20"
const-hex = { version = "1.9.1", features = ["hex"] }
