[package]
name = "rusnap-utils"
version = "0.1.0"
edition = "2021"
repository.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-hex.workspace = true
serde.workspace = true
js-sys.workspace = true
